nessus/nessus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nessus
  name: nessus
  labels:
    app: nessus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nessus
  template:
    metadata:
      labels:
        app: nessus
    spec:
      containers:
      - name: nessus
        image: tenable/nessus:latest-ubuntu
        ports:
        - containerPort: 8834
      restartPolicy: Always
