nessus/nessus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nessus-svc
  namespace: nessus
spec:
  selector:
    app: nessus
  ports:
  - protocol: TCP
    port: 8834
    targetPort: 8834
  type: NodePort
